@@ -1,30 +1,18 @@
 package org.meandre.core;
 
 import java.net.URL;
-import java.util.logging.Logger;
 
 import org.meandre.webui.WebUIFragmentCallback;
 
 /** The component context contains methods to access the context environment
- * of a component.
+ * during the execution of a component.
  *
  * @author Xavier Llor&agrave;
  * @last-modified: Amit Kumar added the getFlowExecutionInstanceID function defn
  *
  */
-public interface ComponentContext {
-
-	/** The name of the available inputs.
-	 *
-	 * @return The array containing the names
-	 */
-	public String [] getInputNames ();
-
-	/** The name of the available outputs.
-	 *
-	 * @return The array containing the names
-	 */
-	public String [] getOutputNames ();
+public interface ComponentContext 
+extends ComponentContextProperties {
 
 	/** Returns the current data component on the given active buffer.
 	 *
@@ -47,21 +35,6 @@ public interface ComponentContext {
 	 * @throws ComponentContextException A violation of the component context was detected
 	 */
 	public boolean isInputAvailable ( String sInputBuffer ) throws ComponentContextException;
-
-
-	/** Returns the list of property names.
-	 *
-	  * @return The array of property names
-	 */
-	public String[] getPropertyNames( );
-
-	/** Check a given component property value. If the property does not exist
-	 * the call returns null.
-	 *
-	 * @param sKey The property key
-	 * @return The property value (null if property does not exist)
-	 */
-	public String getProperty ( String sKey );
 
 	/** Starts the web-based user interface given the proper implementation of the
 	 * webui callback to deal with user action on the client.
@@ -91,12 +64,6 @@ public interface ComponentContext {
 	 *
 	 */
 	public URL getWebUIUrl ( boolean bName ) throws ComponentContextException;
-
-	/** Returns the logging facility.
-	 *
-	 * @return The logger object
-	 */
-	public Logger getLogger();
 
 	/** Returns the unique ID of the executable instance for the current flow.
 	 *
